Broke features into separate rows Added new feature text Fixed styling on mobile for features

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -41,7 +41,7 @@
 
   .first-section{
     height: calc(100vh - 240px);
-    max-height: 600px;
+    min-height: fit-content;
   }
 
   .stayAhead{
